davide ja te miluju funguje to

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.1.1",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
